Make music platforms icons links

--- a/index.html
+++ b/index.html
@@ -140,25 +140,36 @@
                   <span class="font-gradient">We Can Record</span><br />Anything
                 </p>
                 <h2 class="music-icons">
-                  <img
-                    src="./music-icons/youtube-music.png"
-                    alt="youtube-music"
-                  /><img src="./music-icons/spotify.png" alt="spotify" /><img
-                    src="./music-icons/deezer.png"
-                    alt="deezer"
-                  /><img
-                    src="./music-icons/soundcloud.png"
-                    alt="sound-cloud"
-                  /><img src="./music-icons/youtube.png" alt="youtube" /><img
-                    src="./music-icons/itunes.png"
-                    alt="itunes"
-                  /><img
-                    src="./music-icons/amazon-music.png"
-                    alt="amazon-music"
-                  /><img
-                    src="./music-icons/audiomack.png"
-                    alt="audiomack"
-                  /><img src="./music-icons/tiktok.png" alt="tiktok" />
+                  <a href="https://music.youtube.com/">
+                    <img
+                      src="./music-icons/youtube-music.png"
+                      alt="youtube-music"
+                    />
+                  </a>
+                  <a href="https://spotify.com/">
+                    <img src="./music-icons/spotify.png" alt="spotify" />
+                  </a>
+                  <a href="https://www.deezer.com/"
+                    ><img src="./music-icons/deezer.png" alt="deezer" />
+                  </a>
+                  <a href="https://soundcloud.com/">
+                    <img src="./music-icons/soundcloud.png" alt="sound-cloud" />
+                  </a>
+                  <a href="https://youtube.com/">
+                    <img src="./music-icons/youtube.png" alt="youtube"
+                  /></a>
+                  <a href="https://music.amazon.com/">
+                    <img
+                      src="./music-icons/amazon-music.png"
+                      alt="amazon-music"
+                    />
+                  </a>
+                  <a href="https://audiomack.com/">
+                    <img src="./music-icons/audiomack.png" alt="audiomack" />
+                  </a>
+                  <a href="https://www.tiktok.com/"
+                    ><img src="./music-icons/tiktok.png" alt="tiktok"
+                  /></a>
                 </h2>
                 <a href="about.html" class="button">know more</a>
               </div>
@@ -1361,7 +1372,10 @@
                       </a>
                     </div>
                     <picture>
-                      <source type="image/jpeg" srcset="images/img-3-removebg.png" />
+                      <source
+                        type="image/jpeg"
+                        srcset="images/img-3-removebg.png"
+                      />
                       <img
                         src="img/engineer-1.png"
                         class="engineer-avatar"
@@ -1389,7 +1403,10 @@
                       </a>
                     </div>
                     <picture>
-                      <source type="image/jpeg" srcset="images/img-1-removebg.png" />
+                      <source
+                        type="image/jpeg"
+                        srcset="images/img-1-removebg.png"
+                      />
                       <img
                         src="images/img-1-removebg.png"
                         class="engineer-avatar"
@@ -1417,7 +1434,10 @@
                       </a>
                     </div>
                     <picture>
-                      <source type="image/jpeg" srcset="images/img-2-removebg.png" />
+                      <source
+                        type="image/jpeg"
+                        srcset="images/img-2-removebg.png"
+                      />
                       <img
                         src="images/img-2-removebg.png"
                         class="engineer-avatar"
@@ -1445,7 +1465,10 @@
                       </a>
                     </div>
                     <picture>
-                      <source type="image/jpeg" srcset="images/img-5-removebg.png" />
+                      <source
+                        type="image/jpeg"
+                        srcset="images/img-5-removebg.png"
+                      />
                       <img
                         src="images/img-5-removebg.png"
                         class="engineer-avatar"
@@ -1473,7 +1496,10 @@
                       </a>
                     </div>
                     <picture>
-                      <source type="image/jpeg" srcset="images/img-6-removebg.png" />
+                      <source
+                        type="image/jpeg"
+                        srcset="images/img-6-removebg.png"
+                      />
                       <img
                         src="images/img-6-removebg.png"
                         class="engineer-avatar"
@@ -1501,7 +1527,10 @@
                       </a>
                     </div>
                     <picture>
-                      <source type="image/jpeg" srcset="images/img-7-removebg.png" />
+                      <source
+                        type="image/jpeg"
+                        srcset="images/img-7-removebg.png"
+                      />
                       <img
                         src="images/img-7-removebg.png"
                         class="engineer-avatar"
