Apply prettier formatting

--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
                     <img src="./music-icons/soundcloud.png" alt="sound-cloud" />
                   </a>
                   <a href="https://youtube.com/">
-                    <img src="./music-icons/youtube.png" alt="youtube"
-                  /></a>
+                    <img src="./music-icons/youtube.png" alt="youtube" />
+                  </a>
                   <a href="https://music.amazon.com/">
                     <img
                       src="./music-icons/amazon-music.png"
