--- a/pricing.html
+++ b/pricing.html
@@ -75,27 +75,7 @@
           <nav class="main-nav" data-menu-gradient>
             <ul class="menu">
               <li><a href="index.html">HOME</a></li>
-              <li>
-                <a href="about.html"
-                  >ABOUT
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="show-sub-menu"
-                    viewBox="0 0 129 129"
-                    enable-background="new 0 0 129 129"
-                  >
-                    <g>
-                      <path
-                        d="m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z"
-                      />
-                    </g></svg
-                ></a>
-                <ul class="sub-menu">
-                  <li>
-                    <a href="equipment.html">Equipment</a>
-                  </li>
-                </ul>
-              </li>
+              <li><a href="about.html">ABOUT</li>
               <li><a href="projects.html">PROJECTS</a></li>
               <li><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
