--- a/pricing.html
+++ b/pricing.html
@@ -140,10 +140,6 @@
         <div class="container">
           <div class="section-header">
             <h2>Our Prices Plans</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
-              neque cupiditate minus facilis odit fugit.
-            </p>
           </div>
           <div class="prices-slider">
             <div class="tt-slide">
@@ -326,10 +322,6 @@
         <div class="container">
           <div class="section-header">
             <h2>Why Mix In Judahs Records?</h2>
-            <p class="fw-700">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repellendus quas illum nulla, in voluptatibus quo!
-            </p>
           </div>
           <div
             class="row skill-list skill-list-slider mb-xs-30 mb-xl-0"
@@ -461,8 +453,10 @@
                 </div>
                 <h4>Sound</h4>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut
-                  omnis natus accusantium!
+                  We pay attention to sound and that is why we keep doing our
+                  best to maintain global standard. This we do to deliver the
+                  best in sound recording, mixing and mastering of tracks and
+                  albums.
                 </p>
               </div>
             </div>
@@ -615,8 +609,9 @@
                 </div>
                 <h4>Ideas</h4>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas
-                  eligendi tenetur mollitia.
+                  We interact and support our clients with suggestions,
+                  contributions and dynamic directives in achieving a more
+                  better result beyond expectations.
                 </p>
               </div>
             </div>
@@ -769,8 +764,9 @@
                 </div>
                 <h4>Reference</h4>
                 <p>
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                  Unde, ad.
+                  We have good reference record since period of operations. We
+                  also have alliance with notable music icons within and outside
+                  the country.
                 </p>
               </div>
             </div>
