--- a/about.html
+++ b/about.html
@@ -1476,5 +1476,5 @@
     ></script>
   </body>
 
-  <!-- Made for websmirno.site/voicer/about.html Code by ViktorJoey, Mon, 27 Jun 2022 10:24:29 GMT -->
+  <!-- Made for judahsrecords.com/about.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
 </html>
