--- a/blog-post.html
+++ b/blog-post.html
@@ -1139,5 +1139,5 @@
     ></script>
   </body>
 
-  <!-- Made for websmirno.site/voicer/blog-post.html Code by ViktorJoey, Mon, 27 Jun 2022 10:27:39 GMT -->
+  <!-- Made for judahsrecords.com/blog-post.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
 </html>
