--- a/projects.html
+++ b/projects.html
@@ -923,5 +923,5 @@
     ></script>
   </body>
 
-  <!-- Made for websmirno.site/voicer/projects.html Code by ViktorJoey, Mon, 27 Jun 2022 10:31:55 GMT -->
+  <!-- Made for judahsrecords.com/projects.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
 </html>
