--- a/services.html
+++ b/services.html
@@ -1523,5 +1523,5 @@
     ></script>
   </body>
 
-  <!-- Made for websmirno.site/voicer/services.html Code by ViktorJoey, Mon, 27 Jun 2022 10:25:29 GMT -->
+  <!-- Made for judahsrecords.com/services.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
 </html>
