--- a/pricing.html
+++ b/pricing.html
@@ -1231,5 +1231,5 @@
     ></script>
   </body>
 
-  <!-- Made for websmirno.site/voicer/pricing.html Code by ViktorJoey, Mon, 27 Jun 2022 10:25:33 GMT -->
+  <!-- Made for judahsrecords.com/pricing.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
 </html>
