--- a/testimonials.html
+++ b/testimonials.html
@@ -1008,5 +1008,5 @@
     ></script>
   </body>
 
-  <!-- Made for websmirno.site/voicer/testimonials.html Code by ViktorJoey, Mon, 27 Jun 2022 10:25:30 GMT -->
+  <!-- Made for judahsrecords.com/testimonials.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
 </html>
