--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Made for websmirno.site/voicer/about.html Code by ViktorJoey, Mon, 27 Jun 2022 10:24:26 GMT -->
+  <!-- Made for judahsrecords.com/about.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
   <head>
     <title>About | Judahs Records</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
