--- a/blog-post.html
+++ b/blog-post.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Made for websmirno.site/voicer/blog-post.html Code by ViktorJoey, Mon, 27 Jun 2022 10:27:38 GMT -->
+  <!-- Made for judahsrecords.com/blog-post.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
   <head>
     <title>Blog Posts | Judahs Records</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
