--- a/imdex.html
+++ b/imdex.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <!-- Made for judahsrecords.com/imdex.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -35,5 +36,5 @@
     </h2>
   </body>
 
-  <!-- Made for judahsrecords.com/index.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
+  <!-- Made for judahsrecords.com/imdex.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
 </html>
