--- a/pricing.html
+++ b/pricing.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Made for websmirno.site/voicer/pricing.html Code by ViktorJoey, Mon, 27 Jun 2022 10:25:30 GMT -->
+  <!-- Made for judahsrecords.com/pricing.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
   <head>
     <title>Pricing | Judahs Records</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
