--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Made for websmirno.site/voicer/blog.html Code by ViktorJoey, Mon, 27 Jun 2022 10:25:33 GMT -->
+  <!-- Made for judahsrecords.com/blog.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
   <head>
     <title>Blog | Judahs Records</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
