--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Made for websmirno.site/voicer/projects.html Code by ViktorJoey, Mon, 27 Jun 2022 10:27:50 GMT -->
+  <!-- Made for judahsrecords.com/projects.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
   <head>
     <title>Projects | Judahs Records</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
