--- a/testimonials.html
+++ b/testimonials.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Made for websmirno.site/voicer/testimonials.html Code by ViktorJoey, Mon, 27 Jun 2022 10:25:29 GMT -->
+  <!-- Made for judahsrecords.com/testimonials.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
   <head>
     <title>Testimonials | Judahs Records</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
