--- a/index.html
+++ b/index.html
@@ -74,22 +74,7 @@
           <nav class="main-nav" data-menu-gradient>
             <ul class="menu">
               <li class="active"><a href="index.html">HOME</a></li>
-              <li>
-                <a href="about.html"
-                  >ABOUT
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="show-sub-menu"
-                    viewBox="0 0 129 129"
-                    enable-background="new 0 0 129 129"
-                  >
-                    <g>
-                      <path
-                        d="m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z"
-                      />
-                    </g></svg
-                ></a>
-              </li>
+              <li><a href="about.html">ABOUT</a></li>
               <li><a href="projects.html">PROJECTS</a></li>
               <li><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
@@ -760,7 +745,7 @@
       <!-- End clients -->
       <!-- Begin news section -->
       <section
-        class="white-section parralax-section pt-xs-25 pt-md-25 pt-lg-60 pb-xs-25 pb-md-25 pb-lg-60"
+        class="white-section v-separator parralax-section pt-xs-25 pt-md-25 pt-lg-60 pb-xs-25 pb-md-25 pb-lg-60"
       >
         <div
           class="container pt-xs-25 pt-md-25 pt-lg-60 pb-xs-25 pb-md-25 pb-lg-60"
@@ -1505,8 +1490,7 @@
           </h2>
         </div>
         <div id="instafeed" class="instagram-grid-full"></div>
-        <div class="pb-xs-40 pb-md-50 pb-lg-100">
-        </div>
+        <div class="pb-xs-40 pb-md-50 pb-lg-100"></div>
       </section>
       <!-- End instagram block-->
 
@@ -1520,7 +1504,7 @@
                 <h2>Booking</h2>
                 <p>
                   Select your session and book online instantly. If you have any
-                  questions, you give us a call or email us.
+                  questions, you give us a call or visit us.
                 </p>
               </div>
             </div>
