--- a/index.html
+++ b/index.html
@@ -79,10 +79,7 @@
               <li><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
               <li><a href="pricing.html">PRICING</a></li>
-              <li>
-                <a href="blog.html">BLOG</a>
-              </li>
-
+              <li><a href="blog.html">BLOG</a></li>
               <li><a href="contact.html">CONTACTS</a></li>
             </ul>
             <span class="menu-gradient"></span>
