--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Made for judahsrecords.com/projects.html Code by ViktorJoeseph, Mon, 27 Jun 2022 -->
+  <!-- Made for judahsrecords.com/projects.html Code by ViktorJoeseph, Mon, 27 Jun 2022 --
   <head>
     <title>Projects | Judahs Records</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -76,14 +76,11 @@
             <ul class="menu">
               <li><a href="index.html">HOME</a></li>
               <li><a href="about.html">ABOUT</a></li>
-              </li>
               <li class="active"><a href="projects.html">PROJECTS</a></li>
               <li><a href="services.html">SERVICES</a></li>
               <li><a href="testimonials.html">TESTIMONIALS</a></li>
               <li><a href="pricing.html">PRICING</a></li>
-              <li>
-                <a href="blog.html">BLOG</a>
-              </li>
+              <li><a href="blog.html">BLOG</a></li>
 
               <li><a href="contact.html">CONTACTS</a></li>
             </ul>
