--- a/testimonials.html
+++ b/testimonials.html
@@ -60,17 +60,11 @@
             <ul class="menu">
               <li><a href="index.html">HOME</a></li>
               <li><a href="about.html">ABOUT</a></li>
-              </li>
               <li><a href="projects.html">PROJECTS</a></li>
               <li><a href="services.html">SERVICES</a></li>
-              <li class="active">
-                <a href="testimonials.html">TESTIMONIALS</a>
-              </li>
+              <li class="active"><a href="testimonials.html">TESTIMONIALS</a></li>
               <li><a href="pricing.html">PRICING</a></li>
-              <li>
-                <a href="blog.html">BLOG</a>
-              </li>
-
+              <li><a href="blog.html">BLOG</a></li>
               <li><a href="contact.html">CONTACTS</a></li>
             </ul>
             <span class="menu-gradient"></span>
