Update services page

--- a/services.html
+++ b/services.html
@@ -134,19 +134,14 @@
         <div class="massonry-grid tile-price-grid tile-price-wrap">
           <a href="#" class="gallery-grid__item" target="_blank">
             <div class="tile-price-card">
-              <img
-                src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
-                class="lazy"
-                data-src="./img/white-bg-1.jpg"
-                alt="alt"
-              />
+              <img src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=" class="lazy" data-src="img/tile-price-1.jpg" alt="alt" />
               <div class="text">
                 <div>
                   <h2 class="font-gradient">Recording</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                  <p>24 channels of simultaneous recording in three isolation booths and a big room</p>
                 </div>
                 <div class="price">
-                  <span><span>₦</span>35</span>
+                  <span><span>$</span>35</span>
                   hour
                 </div>
               </div>
@@ -154,19 +149,14 @@
           </a>
           <a href="#" class="gallery-grid__item" target="_blank">
             <div class="tile-price-card">
-              <img
-                src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
-                class="lazy"
-                data-src="./img/white-bg-1.jpg"
-                alt="alt"
-              />
+              <img src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=" class="lazy" data-src="img/tile-price-3.jpg" alt="alt" />
               <div class="text">
                 <div>
                   <h2 class="font-gradient">Mixing</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                  <p>Specializing in mixing for music. Stereo and 5.1 capabilities</p>
                 </div>
                 <div class="price">
-                  <span><span>₦</span>55</span>
+                  <span><span>$</span>55</span>
                   hour
                 </div>
               </div>
@@ -174,19 +164,14 @@
           </a>
           <a href="#" class="gallery-grid__item" target="_blank">
             <div class="tile-price-card">
-              <img
-                src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
-                class="lazy"
-                data-src="./img/white-bg-1.jpg"
-                alt="alt"
-              />
+              <img src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=" class="lazy" data-src="img/tile-price-5.jpg" alt="alt" />
               <div class="text">
                 <div>
                   <h2 class="font-gradient">Mastering</h2>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing.</p>
+                  <p>We outsource all mastering services. Ask us who we use</p>
                 </div>
                 <div class="price">
-                  <span><span>₦</span>55</span>
+                  <span><span>$</span>55</span>
                   hour
                 </div>
               </div>
@@ -194,19 +179,11 @@
           </a>
           <a href="#" class="gallery-grid__item" target="_blank">
             <div class="tile-price-card">
-              <img
-                src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
-                class="lazy"
-                data-src="./img/white-bg-1.jpg"
-                alt="alt"
-              />
+              <img src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=" class="lazy" data-src="img/tile-price-2.jpg" alt="alt" />
               <div class="text">
-                <div>
-                  <h2 class="font-gradient">Engineering</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                </div>
+                <div><h2 class="font-gradient">Engineering</h2></div>
                 <div class="price">
-                  <span><span>₦</span>75</span>
+                  <span><span>$</span>75</span>
                   hour
                 </div>
               </div>
@@ -214,19 +191,11 @@
           </a>
           <a href="#" class="gallery-grid__item" target="_blank">
             <div class="tile-price-card">
-              <img
-                src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
-                class="lazy"
-                data-src="./img/white-bg-1.jpg"
-                alt="alt"
-              />
+              <img src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=" class="lazy" data-src="img/tile-price-6.jpg" alt="alt" />
               <div class="text">
-                <div>
-                  <h2 class="font-gradient">Post Production</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                </div>
+                <div><h2 class="font-gradient">Post Production</h2></div>
                 <div class="price">
-                  <span><span>₦</span>35</span>
+                  <span><span>$</span>35</span>
                   hour
                 </div>
               </div>
@@ -234,21 +203,14 @@
           </a>
           <a href="#" class="gallery-grid__item" target="_blank">
             <div class="tile-price-card">
-              <img
-                src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA="
-                class="lazy"
-                data-src="./img/white-bg-1.jpg"
-                alt="alt"
-              />
+              <img src="data:image/gif;base64,R0lGODlhAQABAAAAACwAAAAAAQABAAA=" class="lazy" data-src="img/tile-price-4.jpg" alt="alt" />
               <div class="text">
                 <div>
                   <h2 class="font-gradient">Production</h2>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  </p>
+                  <p>Songwriting, arranging, session playing, producing</p>
                 </div>
                 <div class="price">
-                  <span><span>₦</span>95</span>
+                  <span><span>$</span>95</span>
                   hour
                 </div>
               </div>
