Remove and rephrase some texts

--- a/services.html
+++ b/services.html
@@ -122,9 +122,7 @@
           <div class="section-header">
             <h2>What We Do Best</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Est
-              adipisci facere quaerat corrupti perferendis similique expedita
-              molestiae sequi illo accusamus.
+              We help you bring your music to life.
             </p>
           </div>
         </div>
@@ -138,10 +136,9 @@
               <div class="text">
                 <div>
                   <h2 class="font-gradient">Recording</h2>
-                  <p>24 channels of simultaneous recording in three isolation booths and a big room</p>
                 </div>
                 <div class="price">
-                  <span><span>$</span>35</span>
+                  <span><span>₦</span>00</span>
                   hour
                 </div>
               </div>
@@ -153,10 +150,9 @@
               <div class="text">
                 <div>
                   <h2 class="font-gradient">Mixing</h2>
-                  <p>Specializing in mixing for music. Stereo and 5.1 capabilities</p>
                 </div>
                 <div class="price">
-                  <span><span>$</span>55</span>
+                  <span><span>₦</span>00</span>
                   hour
                 </div>
               </div>
@@ -168,10 +164,9 @@
               <div class="text">
                 <div>
                   <h2 class="font-gradient">Mastering</h2>
-                  <p>We outsource all mastering services. Ask us who we use</p>
                 </div>
                 <div class="price">
-                  <span><span>$</span>55</span>
+                  <span><span>₦</span>00</span>
                   hour
                 </div>
               </div>
@@ -183,7 +178,7 @@
               <div class="text">
                 <div><h2 class="font-gradient">Engineering</h2></div>
                 <div class="price">
-                  <span><span>$</span>75</span>
+                  <span><span>₦</span>00</span>
                   hour
                 </div>
               </div>
@@ -195,7 +190,7 @@
               <div class="text">
                 <div><h2 class="font-gradient">Post Production</h2></div>
                 <div class="price">
-                  <span><span>$</span>35</span>
+                  <span><span>₦</span>00</span>
                   hour
                 </div>
               </div>
@@ -207,10 +202,9 @@
               <div class="text">
                 <div>
                   <h2 class="font-gradient">Production</h2>
-                  <p>Songwriting, arranging, session playing, producing</p>
                 </div>
                 <div class="price">
-                  <span><span>$</span>95</span>
+                  <span><span>₦</span>00</span>
                   hour
                 </div>
               </div>
@@ -224,7 +218,7 @@
             <h2>Book Session</h2>
             <p>
               To book a session: choose your desired session length, click 'Book
-              It', and select an available date and time from the calendar
+              It', and select an available date and time from the calendar.
             </p>
           </div>
           <div class="book-list">
